--- a/src/app/dashboard/customer/customer-details/customer-details.component.html
+++ b/src/app/dashboard/customer/customer-details/customer-details.component.html
@@ -170,10 +170,10 @@
 
         <div class="col-12 row extra-margin">
             <div class="col-md-6">
-                <img *ngIf="customer" [src]="customer?.idImagesUrl[0]" alt="" class="card-img-top img-fluid">
+                <img *ngIf="customer?.idImagesUrl1" [src]="customer?.idImagesUrl1" alt="" class="card-img-top img-fluid">
             </div>
             <div class="col-md-6">
-                <img *ngIf="customer" [src]="customer?.idImagesUrl[1]" alt="" class="card-img-top img-fluid">
+                <img *ngIf="customer?.idImagesUrl2" [src]="customer?.idImagesUrl2" alt="" class="card-img-top img-fluid">
             </div>
         </div>
     </div>
