--- a/src/app/dashboard/customer/containers/add-customer/add-customer.component.html
+++ b/src/app/dashboard/customer/containers/add-customer/add-customer.component.html
@@ -11,7 +11,7 @@
     </div>
   </div>
 
-  <form class="py-3" #cusForm="ngForm" (ngSubmit)="saveCustomer(cusForm.value)" novalidate>
+  <form *ngIf="!showSpiner; else loading;" class="py-3" #cusForm="ngForm" (ngSubmit)="saveCustomer(cusForm.value)" novalidate>
     <div class="row m-0">
       <div class="col-md-6 p-0">
         <div class="form-group row">
@@ -30,6 +30,14 @@
             <small class="form-text text-danger" *ngIf="name.touched && name.invalid">Name is required</small>
           </div>
         </div>
+        <div class="form-group row">
+          <label class="col-md-4 col-form-label">Organization / Company
+          </label>
+          <div class="col-md-8 extra-margin">
+            <input class="form-control" name="organization" #organization="ngModel" [(ngModel)]="customer.organization" placeholder="Organization"
+            />
+          </div>
+        </div>
 
         <div class="form-group row">
           <label class="col-md-4 col-form-label">Email
@@ -38,12 +46,8 @@
             <input class="form-control" name="email" #email="ngModel" [(ngModel)]="customer.email" placeholder="Email" />
           </div>
         </div>
-
       </div>
-
     </div>
-
-
 
     <div class="form-group row">
       <label class="col-md-2 col-form-label">Father's Name
@@ -454,4 +458,10 @@
       Cancel
     </button>
   </form>
+
+  <ng-template #loading>
+    <div class="text-center">
+      <i class="fa fa-refresh"></i>&nbsp; Customers saving...
+    </div>
+  </ng-template>
 </div>
