index page customer report and sms quota

--- a/src/app/dashboard/index/index.component.html
+++ b/src/app/dashboard/index/index.component.html
@@ -7,7 +7,7 @@
                 </div>
                 <div class="content">
                     <div class="text">CUSTOMERS</div>
-                    <div class="number">{{customers.length}}</div>
+                    <div class="number">{{(customers$ | async)?.length}}</div>
                 </div>
             </div>
         </div>
