--- a/src/app/core/components/register/register.component.html
+++ b/src/app/core/components/register/register.component.html
@@ -1,14 +1,16 @@
 <div class="offset-md-4 col-md-4 raised bg-white">
   <div class="row">
     <div class="col-3">
-      <img src="assets/images/isp.webp" alt="" width="80" height="80">
+      <a class="logo" routerLink="/">
+        <img src="assets/images/isp.webp" alt="" width="80" height="80">
+      </a>
     </div>
-    <div class="col-9">
-      <h1 class="h3 mb-3 font-weight-normal">MON INFOTECH</h1>
-    </div>
-    <div class="col-12  text-center">
-      <h5 class="h3 mb-3 font-weight-normal">
-        <strong> REGISTER </strong>
+    <div class="col-9 my-2 text-center">
+      <a class="logo" routerLink="/">
+        <h3>MON INFOTECH</h3>
+      </a>
+      <h5 class="h3 font-weight-normal">
+        REGISTER
       </h5>
     </div>
   </div>
@@ -41,15 +43,12 @@
     <div class="form-group">
 
     </div>
-    <button class="btn btn-sm btn-success raised" type="submit" [disabled]="reg.invalid">
-      <i class="fa fa-user-plus"></i> REGISTER</button>
-    <a class="btn btn-sm btn-light raised" routerLink="/login">Log In</a>
-    <a class="btn btn-sm btn-light raised" routerLink="/">
-      <i class="fa fa-undo"> </i>Home</a>
-    <!-- <div class="d-flex justify-content-between">
-      <a routerLink="/">Home</a>
-      <a routerLink="/login">Login</a>
-    </div> -->
+    <div class="d-flex justify-content-between">
+      <button class="btn btn-sm btn-success raised" type="submit" [disabled]="reg.invalid">
+        <i class="fa fa-user-plus"></i> REGISTER</button>
+      <a class="btn btn-sm btn-light raised" routerLink="/login">Log In</a>
+    </div>
+
 
   </form>
 </div>
