--- a/src/customers/containers/add-customer/add-customer.component.html
+++ b/src/customers/containers/add-customer/add-customer.component.html
@@ -449,12 +449,12 @@
       </div>
     </div>
 
-    <button type="submit" class="btn btn-primary" [class.btn-warning]="editing" [disabled]="cusForm.invalid">
+    <button type="submit" class="btn btn-primary mx-2" [class.btn-warning]="editing" [disabled]="cusForm.invalid">
       <i class="fa fa-plus" *ngIf="!editing"></i>
       <i class="fa fa-pencil-square-o" *ngIf="editing"></i>
-      {{editing ? "Save" : "Create"}} Customer
+      {{editing ? "Update" : "Create"}} Customer
     </button>
-    <button type="reset" class="btn btn-secondary" routerLink="/admin/customerList">
+    <button type="reset" class="btn btn-secondary mx-2" routerLink="/admin/customerList">
       Cancel
     </button>
   </form>
