--- a/src/customers/containers/inactive-customer-list/inactive-customer-list.component.html
+++ b/src/customers/containers/inactive-customer-list/inactive-customer-list.component.html
@@ -1,25 +1,26 @@
 <div class="container">
-    <div class="row mt-2">
-      <div class="col-12 border p-0">
-        <div class="meals__title">
-          <h3>
-              <i class="fa fa-users"></i> Inactive Customers <small>[Total : {{(customers$ | async)?.length}}] </small> 
-          </h3>
-        </div>
-        <div *ngIf="customers$ | async as customers; else loading">
-          <div class="message" *ngIf="!customers.length">
-            <i class="fa fa-frown-o"></i>&nbsp; No customer added yet
-          </div>
-          <div *ngFor="let cus of customers">
-            <customer-list-child [customer]="cus" (image)="showImage($event)" (active)="activate($event)">
-            </customer-list-child>
-          </div>
-        </div>
-        <ng-template #loading>
-          <div class="message">
-            <i class="fa fa-refresh"></i>&nbsp; Customers loading...
-          </div>
-        </ng-template>
+  <div class="row mt-2">
+    <div class="col-12 border p-0">
+      <div class="meals__title">
+        <h3>
+          <i class="fa fa-users"></i> Inactive Customers
+          <small>[Total : {{customers?.length}}] </small>
+        </h3>
       </div>
+      <div *ngIf="customers; else loading">
+        <div class="message" *ngIf="!customers.length">
+          <i class="fa fa-frown-o"></i>&nbsp; No customer added yet
+        </div>
+        <div *ngFor="let cus of customers">
+          <customer-list-child [customer]="cus" (image)="showImage($event)" (active)="activate($event)">
+          </customer-list-child>
+        </div>
+      </div>
+      <ng-template #loading>
+        <div class="message">
+          <i class="fa fa-refresh"></i>&nbsp; Customers loading...
+        </div>
+      </ng-template>
     </div>
   </div>
+</div>
