--- a/src/dashboard/accounting/add-expense/add-expense.component.html
+++ b/src/dashboard/accounting/add-expense/add-expense.component.html
@@ -1,98 +1,99 @@
 <div class="container">
-    <div class="row mt-2">
-  
-      <div class="col-md-7 p-0 px-md-3 border rounded" *ngIf="cashbooks.length>0">
-        <h3 class="text-center">Cashbook</h3>
-        <table class="table table-striped table-responsive-sm m-0">
-          <thead class="thead-dark">
-            <tr>
-              <th>Date</th>
-              <th>Explanation#</th>
-              <th>Debit</th>
-              <th>credit</th>
-              <th>balance</th>
-            </tr>
-          </thead>
-          <!-- {{patient.date | date:'dd-MM-yyyy'}} -->
-          <tbody>
-            <tr *ngFor="let cash of cashbooks">
-              <td>{{ cash?.date | date:'dd-MM-yyyy'}}</td>
-              <td>{{ cash?.explanation }}</td>
-              <td>{{ cash?.debit }}</td>
-              <td>{{ cash?.credit }}</td>
-              <td>{{ cash?.balance }}</td>
-            </tr>
-          </tbody>
-          <tfoot>
-              <tr>
-                <td>
-                  Show
-                  <select name="limit" #cl (change)="changeLimit(cl.value)">
-                    <option value="5">5</option>
-                    <option value="10">10</option>
-                    <option value="15">15</option>
-                    <option value="20">20</option>
-                  </select>
-                  entries &nbsp;
-                </td>
-                <td colspan="4">
-                  <nav aria-label="Page navigation example">
-                    <ul class="pagination justify-content-end">
-                      <li class="page-item">
-                        <a class="page-link" (click)="first()">First</a>
-                      </li>
-                      <li class="page-item">
-                        <a class="page-link" (click)="prev()">Previous</a>
-                      </li>
-                      <li class="page-item">
-                        <a class="page-link" (click)="next()">Next</a>
-                      </li>
-                      <li class="page-item">
-                        <a class="page-link" (click)="last()">Last</a>
-                      </li>
-                    </ul>
-                  </nav>
-                </td>
-              </tr>
-            </tfoot>
-        </table>
-      </div>
-  
-      <div class="col-md-5 p-0 px-md-3">
-        <div class="border">
-          <h3 class="text-center">Add expense</h3>
-          <div class="alert alert-success" role="alert" *ngIf="message?.length>0">
-            <strong>{{message}}</strong>
-          </div>
-          <div class="alert alert-success" role="alert" *ngIf="errorMessage?.length>0">
-            <strong>{{errorMessage}}</strong>
-          </div>
-  
-          <form class="p-4" #addExp="ngForm" (ngSubmit)="saveExpense(addExp.value)">
-            <div class="form-group">
-              <label for="date">Date</label>
-              <input class="form-control" type="date" id="date" name="date" #date="ngModel" [ngModel]="cashbook.date | date:'yyyy-MM-dd'" readonly/>
-              <small class="form-text text-danger" *ngIf="date.invalid && date.touched">Date Required.</small>
-            </div>
-  
-            <div class="form-group">
-              <label for="explanation">Explanation</label>
-              <input class="form-control" id="explanation" name="explanation" #explanation="ngModel" [(ngModel)]="cashbook.explanation"
-                placeholder="Explanation" required>
-              <small class="form-text text-danger" *ngIf="explanation.invalid && explanation.touched">Explanation Required</small>
-            </div>
-  
-            <div class="form-group">
-              <label for="debit">Amount</label>
-              <input class="form-control" type="number" id="credit" name="credit" #credit="ngModel" [(ngModel)]="cashbook.credit" placeholder="Amount"
-                required />
-              <small class="form-text text-danger" *ngIf="credit.invalid && credit.touched">Amount Required</small>
-            </div>
-  
-            <button type="submit" class="btn btn-primary" [disabled]="addExp.invalid">Save</button>
-            <button type="button" class="btn btn-warning" (click)="clear()">Clear</button>
-          </form>
+  <div class="row mt-2">
+
+    <div class="col-md-7 p-0 px-md-3 border rounded" *ngIf="cashbooks.length>0">
+      <h3 class="text-center">Cashbook</h3>
+      <table class="table table-striped table-responsive-sm m-0">
+        <thead class="thead-dark">
+          <tr>
+            <th>Date</th>
+            <th>Explanation#</th>
+            <th>Debit</th>
+            <th>credit</th>
+            <th>balance</th>
+          </tr>
+        </thead>
+        <!-- {{patient.date | date:'dd-MM-yyyy'}} -->
+        <tbody>
+          <tr *ngFor="let cash of cashbooks">
+            <td>{{ cash?.date.toDate() | date:'dd-MM-yyyy'}}</td>
+            <td>{{ cash?.explanation }}</td>
+            <td>{{ cash?.debit }}</td>
+            <td>{{ cash?.credit }}</td>
+            <td>{{ cash?.balance }}</td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+            <td>
+              Show
+              <select name="limit" #cl (change)="changeLimit(cl.value)">
+                <option value="5">5</option>
+                <option value="10">10</option>
+                <option value="15">15</option>
+                <option value="20">20</option>
+              </select>
+              entries &nbsp;
+            </td>
+            <td colspan="4">
+              <nav aria-label="Page navigation example">
+                <ul class="pagination justify-content-end">
+                  <li class="page-item">
+                    <a class="page-link" (click)="first()">First</a>
+                  </li>
+                  <li class="page-item">
+                    <a class="page-link" (click)="prev()">Previous</a>
+                  </li>
+                  <li class="page-item">
+                    <a class="page-link" (click)="next()">Next</a>
+                  </li>
+                  <li class="page-item">
+                    <a class="page-link" (click)="last()">Last</a>
+                  </li>
+                </ul>
+              </nav>
+            </td>
+          </tr>
+        </tfoot>
+      </table>
+    </div>
+
+    <div class="col-md-5 p-0 px-md-3">
+      <div class="border">
+        <h3 class="text-center">Add expense</h3>
+        <div class="alert alert-success" role="alert" *ngIf="message?.length>0">
+          <strong>{{message}}</strong>
         </div>
+        <div class="alert alert-success" role="alert" *ngIf="errorMessage?.length>0">
+          <strong>{{errorMessage}}</strong>
+        </div>
+
+        <form class="p-4" #addExp="ngForm" (ngSubmit)="saveExpense(addExp.value)">
+          <div class="form-group">
+            <label for="date">Date</label>
+            <input class="form-control" type="date" id="date" name="date" #date="ngModel" [ngModel]="cashbook.date | date:'yyyy-MM-dd'"
+              readonly/>
+            <small class="form-text text-danger" *ngIf="date.invalid && date.touched">Date Required.</small>
+          </div>
+
+          <div class="form-group">
+            <label for="explanation">Explanation</label>
+            <input class="form-control" id="explanation" name="explanation" #explanation="ngModel" [(ngModel)]="cashbook.explanation"
+              placeholder="Explanation" required>
+            <small class="form-text text-danger" *ngIf="explanation.invalid && explanation.touched">Explanation Required</small>
+          </div>
+
+          <div class="form-group">
+            <label for="debit">Amount</label>
+            <input class="form-control" type="number" id="credit" name="credit" #credit="ngModel" [(ngModel)]="cashbook.credit" placeholder="Amount"
+              required />
+            <small class="form-text text-danger" *ngIf="credit.invalid && credit.touched">Amount Required</small>
+          </div>
+
+          <button type="submit" class="btn btn-primary mx-2" [disabled]="addExp.invalid">Save</button>
+          <button type="button" class="btn btn-warning mx-2" (click)="clear()">Clear</button>
+        </form>
       </div>
     </div>
   </div>
+</div>
