--- a/src/customers/containers/customer-details/customer-details.component.html
+++ b/src/customers/containers/customer-details/customer-details.component.html
@@ -1,12 +1,12 @@
 <div class="row">
     <div class="col-3"></div>
     <div class="col-6 text-center">
-        <h2>{{customer?.name}} Details</h2>
+        <h2>{{(customer$ | async)?.name}} Details</h2>
         <hr>
     </div>
 </div>
 
-<div class="container customer-info">
+<div *ngIf="customer$ | async as customer; else loading" class="container customer-info">
     <div class="row">
         <div class="col-6">
             <div class="form-group row">
@@ -187,3 +187,9 @@
         <a class="btn btn-sm btn-warning raised" routerLink="/customers/new/{{customer?.id}}">Edit</a>
     </div>
 </div>
+
+<ng-template #loading>
+    <div class="message">
+        <i class="fa fa-refresh"></i>&nbsp; Customer loading...
+    </div>
+</ng-template>
