--- a/src/customers/containers/customers/customers.component.html
+++ b/src/customers/containers/customers/customers.component.html
@@ -4,10 +4,10 @@
       <div class="meals__title">
         <h3>
           <i class="fa fa-users"></i> Active Customers
-          <small>[Total : {{customers?.length}}] </small>
+          <small>[Total : {{(customers$ | async)?.length}}] </small>
         </h3>
       </div>
-      <div *ngIf="customers; else loading">
+      <div *ngIf="customers$ | async as customers; else loading">
         <div class="message" *ngIf="!customers.length">
           <i class="fa fa-frown-o"></i>&nbsp; No customer added yet
         </div>
@@ -17,7 +17,7 @@
         </div>
       </div>
       <ng-template #loading>
-        <div class="message">
+        <div class="text-center">
           <i class="fa fa-refresh"></i>&nbsp; Customers loading...
         </div>
       </ng-template>
