--- a/src/customers/containers/inactive-customer-list/inactive-customer-list.component.html
+++ b/src/customers/containers/inactive-customer-list/inactive-customer-list.component.html
@@ -4,10 +4,10 @@
       <div class="meals__title">
         <h3>
           <i class="fa fa-users"></i> Inactive Customers
-          <small>[Total : {{customers?.length}}] </small>
+          <small>[Total : {{(customers$ | async)?.length}}] </small>
         </h3>
       </div>
-      <div *ngIf="customers; else loading">
+      <div *ngIf="customers$ | async as customers; else loading">
         <div class="message" *ngIf="!customers.length">
           <i class="fa fa-frown-o"></i>&nbsp; No inactive customer yet
         </div>
