--- a/src/customers/containers/customer-sub-navbar/customer-sub-navbar.component.html
+++ b/src/customers/containers/customer-sub-navbar/customer-sub-navbar.component.html
@@ -2,4 +2,5 @@
   <a routerLink="/customers" class="ml-2 btn btn-light btn-sm" [class.active]="active == 1" (click)="makeActive(1)">LIST</a>
   <a routerLink="/customers/new" class="btn btn-light btn-sm" [class.active]="active == 2" (click)="makeActive(2)">ADD</a>
   <a routerLink="/customers/inactive" class="ml-2 btn btn-light btn-sm" [class.active]="active == 3" (click)="makeActive(3)">INACTIVES</a>
+  <a routerLink="/customers/zone" class="ml-2 btn btn-light btn-sm" [class.active]="active == 4" (click)="makeActive(4)">ZONE</a>
 </nav>
