--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -1,18 +1,23 @@
 <div class="offset-md-4 col-md-4 raised bg-white">
   <div class="row">
-    <div class="col-3">
-      <a class="logo" routerLink="/">
-        <img src="assets/images/isp.webp" alt="" width="80" height="80">
-      </a>
+    <div class="col-12 login">
+      <div class="login-header">
+        <div class="login-header-logo">
+          <a class="logo" routerLink="/">
+            <img class="login-header-logo-img" src="assets/images/isp.webp">
+          </a>
+        </div>
+        <a routerLink="/">
+          <div class="login-header-title">ISP Billing</div>
+        </a>
+        by
+        <a href="https://www.moninfotech.com"> MON-INFOTECH</a>
+      </div>
+
+      <h3 class="text-center">Login</h3>
+
     </div>
-    <div class="col-9 my-2 text-center">
-      <a class="logo" routerLink="/">
-        <h3>MON INFOTECH</h3>
-      </a>
-      <h5 class="h3 font-weight-normal">
-        LOGIN
-      </h5>
-    </div>
+
   </div>
 
   <form class="p-4" #log="ngForm" (ngSubmit)="login(log.value)">
